--- a/index.html
+++ b/index.html
@@ -82,14 +82,12 @@
 
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
 
                 </div>
@@ -107,14 +105,12 @@
                         with our captivating fragances</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -130,14 +126,12 @@
                         and fresh petals</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -153,14 +147,12 @@
                         fragrance</span><br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -176,14 +168,12 @@
                         just like your personality</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -199,14 +189,12 @@
                         refined perfume</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -222,14 +210,12 @@
                         your inner sensitivity</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -245,14 +231,12 @@
                         to perfection</span><br> <br>
                     <a href="signup.html">
                         <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">Sign
-                            Up</button>
+                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
                     </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
-                            type="submit">Log
-                            in</button>
+                            type="submit">LOG IN</button>
                     </a>
                 </div>
             </div>
@@ -400,9 +384,9 @@
     <div class="col-12 d-flex py-3 mt-5 row d-md-flex justify-content-around align-items-center row-gap-3 face"
         style="background-color: #ff4b91;">
         <h1 class="text-center text-light">FACE OF THE BRAND</h1>
-        <div class="col-12 col-sm-12 col-md-4 text-light">
+        <div class="col-12 col-sm-12 col-md-4 text-light" style="text-align: center;">
             <p style="font-size: 32px; font-weight: 500; font-family: 'Times New Roman', Times, serif;">AMOO OLANIKE ZAINAB</p>
-            <a href=""><button class="btn rounded bg-light"
+            <a href=""><button class="btn rounded bg-light amoo"
                     style="color: #ff4b91; font-family: 'Times New Roman', Times, serif; font-size: 20px; font-weight: 700;">About us<img src="./image/east_20dp_FF4B91_FILL0_wght400_GRAD0_opsz20.png" alt=""
                         width="24px"></button></a>
         </div>
@@ -411,17 +395,17 @@
             data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active myown1" data-bs-interval="5000"
-                    style="background-image: url(./image/Nike\ 1\ \(1\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat;">
+                    style="background-image: url(./image/Nike\ 1\ \(1\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat; border-radius: 15px;">
                     <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 </div>
 
                 <div class="carousel-item myown1" data-bs-interval="5000"
-                    style="background-image: url(./image/Nike\ 1\ \(2\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat;">
+                    style="background-image: url(./image/Nike\ 1\ \(2\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat; border-radius: 15px;">
                     <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 </div>
 
                 <div class="carousel-item myown1" data-bs-interval="5000"
-                    style="background-image: url(./image/Nike\ 1\ \(3\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat;">
+                    style="background-image: url(./image/Nike\ 1\ \(3\).jpg); background-size: cover; width: 100%; height: 50vh; background-position: center; background-repeat: no-repeat; border-radius: 15px;">
                     <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 </div>
             </div>
