--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
     </div>
 
 
-    <div class="col-8 mx-auto mt-5 py-4 px-4 testimonials-div" style="background-color: #d9f2f2;">
-        <h3 class="text-center" style="color: gold;">TESTIMONIALS</h3>
+    <div class="col-10 mx-auto mt-5 py-4 px-4 testimonials-div">
+        <h3 class="text-center" style="color: gold;">REVIEWS</h3>
 
         <div class="d-flex green mt-3 row d-md-flex col-sm-12 col-md-6 col-lg-12 mx-auto row-gap-3">
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/davido image.png" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #00a7a7;">
+                <div class="card-body border-div" style="background-color: #ff4b91;">
                     <h5 class="card-title text-center" style="color: white;">David Adedeji Adeleke (Davido)</h5>
                     <p class="card-text">"I'm obsessed with the fragrance i bought from this site! The scent is amazing,
                         and the customer service is top-notch and it will always be my best."</p>
@@ -349,7 +349,7 @@
 
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/olamide.jpeg" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #00a7a7;">
+                <div class="card-body border-div" style="background-color: #ff4b91;">
                     <h6 class="card-title text-center" style="color: white; font-size: 20px;">Olamide Adedeji (Olamide)
                     </h6>
                     <p class="card-text">"The perfume i received exceeded my expectations! The packaging was beautiful,
@@ -365,7 +365,7 @@
 
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/wizkid.jpg" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #00a7a7;">
+                <div class="card-body border-div" style="background-color: #ff4b91;">
                     <h5 class="card-title text-center" style="color: white;">Ayodeji Ibrahim Balogun (Wizkid)</h5>
                     <p class="card-text">"I've tried many perfume sites, but this one is by far the best. The selection
                         is vast, and the customer service team is friendly and helpful."</p>
