--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     
                     <input id="logpass" placeholder="Password" class="input-field" name="logpass" type="password" />
                 </label>
-                <a href=""><button class="btn" type="button">Login</button></a>
+                <a href="dashboard.html"><button class="btn" type="button">Login</button></a>
                 <a class="btn-link">Forgot your password?</a>
             </form>
         </div>
