--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a class="navbar-brand" href="#"><img src="./image/IMG-20250507-WA0061-removebg-preview.png" alt=""
                     width="150vw"></a>
-            <button class="navbar-toggler" style="background-color: gold;" type="button" data-bs-toggle="collapse"
+            <button class   ="navbar-toggler" style="background-color: gold;" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,21 +28,21 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 30px;">
                     <li class="nav-item" style="margin-left: 50px;">
                         <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold;">Home</a>
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> HOME</a> 
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold;">Blog</a>
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/news_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> BLOG</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold;">
-                            shop
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/shopping_cart_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> 
+                            SHOP
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold;">About us</a>
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
                     </li>
                     <li class="nav-item">
                         <img src="./image/Frame 36013.png" alt="">
@@ -103,10 +103,11 @@
                     <span style="font-size: 33px; margin-top: 600px; color: white; text-transform: uppercase;">Seduce the hearts of those around
                         you
                         with our captivating fragances</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -124,10 +125,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">Our perfumes captures the essence of blooming flowers
                         and fresh petals</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -145,10 +147,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">Reveal your true self with our captivating
                         fragrance</span><br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -166,10 +169,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">Let the fragrance of our perfume blossom and flourish
                         just like your personality</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -187,10 +191,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">Experience the epitome of luxury with our exclusive and
                         refined perfume</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -208,10 +213,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">Indulge in a seductive aroma of our perfume and unleash
                         your inner sensitivity</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -229,10 +235,11 @@
                         ZEE SCENTS</h1>
                     <span style="font-size: 33px; color: white; text-transform: uppercase;">ELevate your elegance with our premium perfume, crafted
                         to perfection</span><br> <br>
-                    <a href="signup.html">
-                        <button class="btn border-0 button1"
-                            style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
-                    </a>
+
+                        <a href="signup.html">
+                            <button class="btn border-0 button1"
+                                style="background-color: gold; color: white; font-weight: bold;" type="submit">SIGN UP</button>
+                        </a>
                     <a href="login.html">
                         <button class="btn btn-outline-primary border-0 button2"
                             style="background-color: white; color: gold; font-weight: bold; margin-left: 50px;"
@@ -253,6 +260,7 @@
     </div>
 
 
+    <!--..................................... Categories Section................................................... -->
     <h3 class="text-center mt-5">CATEGORIES</h3>
 
     <div class="col-10 row d-md-flex mx-auto mt-5 row-gap-3 gap-4">
@@ -334,7 +342,7 @@
         <div class="d-flex green mt-3 row d-md-flex col-sm-12 col-md-12 col-lg-12 mx-auto row-gap-3">
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/davido image.png" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #ff4b91;">
+                <div class="card-body border-div" style="background-color: #ff4b91">
                     <h5 class="card-title text-center" style="color: white;">David Adedeji Adeleke (Davido)</h5>
                     <p class="card-text">"I'm obsessed with the fragrance i bought from this site! The scent is amazing,
                         and the customer service is top-notch and it will always be my best."</p>
@@ -349,7 +357,7 @@
 
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/olamide.jpeg" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #ff4b91;">
+                <div class="card-body border-div" style="background-color: #ff4b91">
                     <h6 class="card-title text-center" style="color: white; font-size: 20px;">Olamide Adedeji (Olamide)
                     </h6>
                     <p class="card-text">"The perfume i received exceeded my expectations! The packaging was beautiful,
@@ -365,7 +373,7 @@
 
             <div class="card border-0 mx-auto" style="width: 18rem; background-color: #0001;">
                 <img src="./image/wizkid.jpg" class="card-img-top" alt="...">
-                <div class="card-body border-div" style="background-color: #ff4b91;">
+                <div class="card-body border-div" style="background-color: #ff4b91">
                     <h5 class="card-title text-center" style="color: white;">Ayodeji Ibrahim Balogun (Wizkid)</h5>
                     <p class="card-text">"I've tried many perfume sites, but this one is by far the best. The selection
                         is vast, and the customer service team is friendly and helpful."</p>
@@ -381,8 +389,8 @@
     </div>
 
 
-    <div class="col-12 d-flex py-3 mt-5 row d-md-flex justify-content-around align-items-center row-gap-3 face"
-        style="background-color: #ff4b91;">
+    <div class="col-12 d-flex py-3 mx-auto mt-5 row d-md-flex justify-content-around align-items-center row-gap-3 face"
+        style="background-color: #ff4b91">
         <h1 class="text-center text-light">FACE OF THE BRAND</h1>
         <div class="col-12 col-sm-12 col-md-4 text-light" style="text-align: center;">
             <p style="font-size: 32px; font-weight: 500; font-family: 'Times New Roman', Times, serif;">AMOO OLANIKE ZAINAB</p>
@@ -444,5 +452,5 @@
         </div>
     </div>
 </body>
-
+    <script src="index.js"></script>
 </html>
