--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zee scents dashboard</title>
+    <link rel="icon" type="image/x-icon" href="./image/IMG-20250507-WA0061-removebg-preview.png">
     <link rel="stylesheet" href="dashboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
@@ -18,26 +19,30 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse testin" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 30px;">
-                    <li class="nav-item" style="margin-left: 50px;">
-                        <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> HOME</a> 
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/news_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> BLOG</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/shopping_cart_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> 
-                            SHOP
-                        </a>
-                    </li>
+            <div class="collapse navbar-collapse testin" id="navbarSupportedContent" style="margin-left: 40px;">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 10px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
+                        <a class="nav-link active" aria-current="page" href="#male"
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">MALE CATEGORIES</a> 
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#female"
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">FEMALE CATEGORIES</a> 
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#spray"
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">BODY SPRAY</a> 
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#roll-on"
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">ROLL-ON</a> 
+                    </li>
+
+                    
+                    
                     <li class="nav-item">
                         <img src="./image/Frame 36013.png" alt="">
                     </li>
@@ -52,8 +57,8 @@
         </div>
     </nav>
 
-
-    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" style="margin-top: 150px;">
+<!-- ..............................................MALE CATEGORIES................................................... -->
+    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="male" style="margin-top: 150px;">
         <h1 class="text-center" style="color: gold;">MALE CATEGORIES</h1>
         <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/1" class="card-img-top" alt="...">
@@ -134,15 +139,15 @@
         </center>
     </div>
 
-
-    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" style="margin-top: 80px;">
+<!-- ..................................................FEMALE CATEGORIES........................................... -->
+    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="female" style="margin-top: 80px;">
         <h1 class="text-center" style="color: gold;">FEMALE CATEGORIES</h1>
         <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./female perfume/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">GELMA</p>
 
-                <h5 class="card-title" style="font-size: 16px;">#7,799</h5>
+                <h5 class="card-title" style="font-size: 16px;">#7,999</h5>
 
                 <span style="font-size: 12px;">43 items left</span>
 
@@ -158,7 +163,7 @@
             <img src="./female perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PANIOMAL</p>
-                <h5 class="card-title" style="font-size: 16px;">#16,990</h5>
+                <h5 class="card-title" style="font-size: 16px;">#25,000</h5>
                 <span style="font-size: 12px;">12 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -172,7 +177,7 @@
             <img src="./female perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENAL</p>
-                <h5 class="card-title" style="font-size: 16px;">#4,999</h5>
+                <h5 class="card-title" style="font-size: 16px;">#20,000</h5>
                 <span style="font-size: 12px;">49 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -186,7 +191,7 @@
             <img src="./female perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARIFAN</p>
-                <h5 class="card-title" style="font-size: 16px;">#10,280</h5>
+                <h5 class="card-title" style="font-size: 16px;">#25,280</h5>
                 <span style="font-size: 12px;">47 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -197,10 +202,10 @@
 
 
         <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
-            <img src="./female perfume/5" class="card-img-top" alt="..." width="200px">
+            <img src="./female perfume/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FISHSUJ</p>
-                <h5 class="card-title" style="font-size: 16px;">#14,977</h5>
+                <h5 class="card-title" style="font-size: 16px;">#6,000</h5>
                 <span style="font-size: 12px;">41 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -216,8 +221,8 @@
         </center>
     </div>
 
-
-    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" style="margin-top: 80px;">
+<!-- ..............................................BODY SPRAY....................................................... -->
+    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="spray" style="margin-top: 80px;">
         <h1 class="text-center" style="color: gold;">BODY SPRAY</h1>
         <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./body spray image/1" class="card-img-top" alt="...">
@@ -296,6 +301,114 @@
                 <button class="btn border-0 button1 mt-2" style="background-color: gold; color: white; font-weight: bold;" type="submit">VIEW MORE <img src="./image/east_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""></button>
             </a>
         </center>
+    </div>
+
+
+    <!-- .....................................................ROLL-ON.................................................. -->
+    <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="roll-on" style="margin-top: 80px;">
+        <h1 class="text-center" style="color: gold;">ROLL-ON</h1>
+        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+            <img src="./Rollonimage/download" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RORDSIT</p>
+
+                <h5 class="card-title" style="font-size: 16px;">#2,500</h5>
+
+                <span style="font-size: 12px;">43 items left</span>
+
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100" style="height: 10px;">
+                    <div class="progress-bar bg-warning" style="width: 86%;"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+            <img src="./Rollonimage/roll 2" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DEOONT</p>
+                <h5 class="card-title" style="font-size: 16px;">#4,000</h5>
+                <span style="font-size: 12px;">12 items left</span>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100" style="height: 10px;">
+                    <div class="progress-bar bg-warning" style="width: 24%;"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+            <img src="./Rollonimage/roll 3" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">SERT</p>
+                <h5 class="card-title" style="font-size: 16px;">#1,999</h5>
+                <span style="font-size: 12px;">49 items left</span>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100" style="height: 10px;">
+                    <div class="progress-bar bg-warning" style="width: 98%;"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+            <img src="./Rollonimage/roll 4" class="card-img-top" alt="..." width="200px">
+            <div class="card-body">
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
+                <h5 class="card-title" style="font-size: 16px;">#2,280</h5>
+                <span style="font-size: 12px;">47 items left</span>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100" style="height: 10px;">
+                    <div class="progress-bar bg-warning" style="width: 94%;"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+            <img src="./Rollonimage/roll 5" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
+                <h5 class="card-title" style="font-size: 16px;">#2,500</h5>
+                <span style="font-size: 12px;">41 items left</span>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
+                    aria-valuemax="100" style="height: 10px;">
+                    <div class="progress-bar bg-warning" style="width: 82%;"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <center>
+            <a href="roll-on.html">
+                <button class="btn border-0 button1 mt-2" style="background-color: gold; color: white; font-weight: bold;" type="submit">VIEW MORE <img src="./image/east_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""></button>
+            </a>
+        </center>
+    </div>
+
+
+    <div class="footer mt-5">
+        <div class="div-footer">
+            <div class="text-div-footer">
+                <h1 class="text-light">CONTACT US</h1>
+            </div>
+
+            <div class="logo-div" style="display: flex; justify-content: center; align-items: center; gap: 30px;">
+                <a href=""><img src="./image/ic--baseline-facebook.png" alt="" width="40px" class="logo1"></a>
+                <a href=""><img src="./image/ic--baseline-tiktok (1).png" alt="" width="40px" class="logo2"></a>
+                <a href=""><img src="./image/mdi--instagram.png" alt="" width="40px" class="logo3"></a>
+                <a href=""><img src="./image/mdi--linkedin (1).png" alt="" width="40px" class="logo4"></a>
+                <a href=""><img src="./image/mdi--youtube.png" alt="" width="40px" class="logo5"></a>
+                <a href=""><img src="./image/ic--baseline-snapchat (1).png" alt="" width="40px" class="logo6"></a>
+                <a href="https://wa.me/message/AD5CTWSA3CDPN1"><img src="./image/ic--baseline-whatsapp.png" alt="" width="40px" class="logo7"></a>
+            </div>
+        </div>
+        <hr style="color: white;">
+
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <span class="text-center" style="color: white; font-size: 20px;">COPYRIGHT 2025</span>
+        </div>
     </div>
 </body>
 </html>
