--- a/female.html
+++ b/female.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Female Categories</title>
+    <title>FEMALE CATEGORIES</title>
+    <link rel="icon" type="image/x-icon" href="./image/IMG-20250507-WA0061-removebg-preview.png">
     <link rel="stylesheet" href="female.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
@@ -21,17 +22,16 @@
             <div class="collapse navbar-collapse testin" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 30px;">
                     <li class="nav-item" style="margin-left: 50px;">
-                        <a class="nav-link active" aria-current="page" href="#"
+                        <a class="nav-link active" aria-current="page" href="dashboard.html"
                             style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> HOME</a> 
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/news_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> BLOG</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="male.html"
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">MALE SECTION</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/shopping_cart_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> 
-                            SHOP
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="spray.html"
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center">SPRAY SECTION
                         </a>
                     </li>
                     <li class="nav-item">
@@ -60,7 +60,7 @@
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">GELMA</p>
 
-                <h5 class="card-title" style="font-size: 16px;">#5,833</h5>
+                <h5 class="card-title" style="font-size: 16px;">#7,999</h5>
 
                 <span style="font-size: 12px;">43 items left</span>
 
@@ -76,7 +76,7 @@
             <img src="./female perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PANIOMAL</p>
-                <h5 class="card-title" style="font-size: 16px;">#40,000</h5>
+                <h5 class="card-title" style="font-size: 16px;">#25,000</h5>
                 <span style="font-size: 12px;">12 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -90,7 +90,7 @@
             <img src="./female perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENAL</p>
-                <h5 class="card-title" style="font-size: 16px;">#19,506</h5>
+                <h5 class="card-title" style="font-size: 16px;">#20,000</h5>
                 <span style="font-size: 12px;">49 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -104,7 +104,7 @@
             <img src="./female perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARIFAN</p>
-                <h5 class="card-title" style="font-size: 16px;">#27,280</h5>
+                <h5 class="card-title" style="font-size: 16px;">#25,280</h5>
                 <span style="font-size: 12px;">47 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
                     aria-valuemax="100" style="height: 10px;">
@@ -335,6 +335,30 @@
                     <div class="progress-bar bg-warning" style="width: 98%;"></div>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div class="footer mt-5">
+        <div class="div-footer">
+            <div class="text-div-footer">
+                <h1 class="text-light">CONTACT US</h1>
+            </div>
+
+            <div class="logo-div" style="display: flex; justify-content: center; align-items: center; gap: 30px;">
+                <a href=""><img src="./image/ic--baseline-facebook.png" alt="" width="40px" class="logo1"></a>
+                <a href=""><img src="./image/ic--baseline-tiktok (1).png" alt="" width="40px" class="logo2"></a>
+                <a href=""><img src="./image/mdi--instagram.png" alt="" width="40px" class="logo3"></a>
+                <a href=""><img src="./image/mdi--linkedin (1).png" alt="" width="40px" class="logo4"></a>
+                <a href=""><img src="./image/mdi--youtube.png" alt="" width="40px" class="logo5"></a>
+                <a href=""><img src="./image/ic--baseline-snapchat (1).png" alt="" width="40px" class="logo6"></a>
+                <a href="https://wa.me/message/AD5CTWSA3CDPN1"><img src="./image/ic--baseline-whatsapp.png" alt="" width="40px" class="logo7"></a>
+            </div>
+        </div>
+        <hr style="color: white;">
+
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <span class="text-center" style="color: white; font-size: 20px;">COPYRIGHT 2025</span>
         </div>
     </div>
 </body>
