--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zee-scents</title>
+    <link rel="icon" type="image/x-icon" href="./image/IMG-20250507-WA0061-removebg-preview.png">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -432,7 +433,7 @@
     <div class="footer mt-5">
         <div class="div-footer">
             <div class="text-div-footer">
-                <h1 class="text-light">FOLLOW US</h1>
+                <h1 class="text-light">CONTACT US</h1>
             </div>
 
             <div class="logo-div" style="display: flex; justify-content: center; align-items: center; gap: 30px;">
