--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zee scents sign up</title>
+    <link rel="icon" type="image/x-icon" href="./image/IMG-20250507-WA0061-removebg-preview.png">
     <link rel="stylesheet" href="signup.css">
 </head>
 <body>
