--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <a class="navbar-brand" href="#"><img src="./image/IMG-20250507-WA0061-removebg-preview.png" alt=""
                     width="150vw"></a>
-            <button class   ="navbar-toggler" style="background-color: gold;" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler" style="background-color: gold;" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
                     </li>
                     <li class="nav-item">
                         <img src="./image/Frame 36013.png" alt="">
