--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./image/IMG-20250507-WA0061-removebg-preview.png">
     <link rel="stylesheet" href="dashboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-primary fixed-top navbar-container">
@@ -23,22 +23,22 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 10px;">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#male"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">MALE CATEGORIES</a> 
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">MALE CATEGORIES</a> 
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#female"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">FEMALE CATEGORIES</a> 
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">FEMALE CATEGORIES</a> 
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#spray"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">BODY SPRAY</a> 
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">BODY SPRAY</a> 
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#roll-on"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">ROLL-ON</a> 
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">ROLL-ON</a> 
                     </li>
 
                     
@@ -47,13 +47,11 @@
                         <img src="./image/Frame 36013.png" alt="">
                     </li>
                 </ul>
-
-
-                <a href="signup.html">
-                    <button class="btn btn-outline-primary border-0"
-                        style="background-color: gold; color: white; font-weight: bold;" type="submit">Bookings</button>
-                </a>
             </div>
+        </div>
+        <div class="input-group mb-1 nav-search">
+            <input type="text" class="form-control" placeholder="Search your favorite perfume" aria-label="Recipient’s username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-warning" type="button" id="button-addon2" style="border: 1px solid gold;">Search</button>
         </div>
     </nav>
 
@@ -80,7 +78,7 @@
         <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">BENIE</p>
+                <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENIE</p>
                 <h5 class="card-title" style="font-size: 16px;">#40,000</h5>
                 <span style="font-size: 12px;">12 items left</span>
                 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0"
