--- a/roll-on.html
+++ b/roll-on.html
@@ -23,37 +23,36 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 30px;">
                     <li class="nav-item" style="margin-left: 50px;">
                         <a class="nav-link active" aria-current="page" href="dashboard.html"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> HOME</a> 
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; margin-top: 10px;"><img src="./image/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> HOME</a> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="female.html"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;">FEMALE SECTION</a>
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">FEMALE SECTION</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="spray.html"
-                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center">SPRAY SECTION
+                            aria-expanded="false" style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">SPRAY SECTION
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"
-                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
+                        <a class="nav-link active" aria-current="page" href="male.html"
+                            style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center; text-align: center;">MALE SECTION</a>
                     </li>
                     <li class="nav-item">
                         <img src="./image/Frame 36013.png" alt="">
                     </li>
                 </ul>
-
-
-                <a href="signup.html">
-                    <button class="btn btn-outline-primary border-0"
-                        style="background-color: gold; color: white; font-weight: bold;" type="submit">Bookings</button>
-                </a>
             </div>
+        </div>
+
+        <div class="input-group mb-1 nav-search">
+            <input type="text" class="form-control" placeholder="Search your favorite perfume" aria-label="Recipient’s username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-warning" type="button" id="button-addon2" style="border: 1px solid gold;">Search</button>
         </div>
     </nav>
 
 
-    <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-3 pb-5" style="margin-top: 150px; justify-content: center; align-items: center;">
+    <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-3 pb-5 contain" style="margin-top: 150px; justify-content: center; align-items: center;">
         <h1 class="text-center" style="color: gold;">ROLL-ON CATEGORIES</h1>
         <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height: auto;">
             <img src="./Rollonimage/download" class="card-img-top" alt="...">
