--- a/male.html
+++ b/male.html
@@ -51,7 +51,7 @@
 
     <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-1 pb-5" style="margin-top: 150px;">
         <h1 class="text-center" style="color: gold;">MALE CATEGORIES</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PARUTA</p>
@@ -68,7 +68,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENIE</p>
@@ -82,7 +82,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MYTH</p>
@@ -96,7 +96,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ECINY</p>
@@ -110,7 +110,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DUSTES</p>
@@ -124,7 +124,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/6" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MEUCS DEAN</p>
@@ -138,7 +138,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/7" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BROING</p>
@@ -152,7 +152,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/8" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BANSGULME</p>
@@ -166,7 +166,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/9" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">LEGEND</p>
@@ -180,7 +180,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/10" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">IRON WOOD</p>
@@ -194,7 +194,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/11" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NOCTURNE</p>
@@ -208,7 +208,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/12" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PHANTOM</p>
@@ -222,7 +222,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/13" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FRENS</p>
@@ -236,7 +236,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/14" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">IROGENK</p>
@@ -250,7 +250,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/15" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FRANST</p>
@@ -264,7 +264,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/16" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PADISES</p>
@@ -278,7 +278,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/17" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NAIMEST</p>
@@ -292,7 +292,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/18" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PANALLES</p>
@@ -306,7 +306,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/19" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MEAROY</p>
@@ -320,7 +320,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/20" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MRELOSEI</p>
