--- a/spray.html
+++ b/spray.html
@@ -54,7 +54,7 @@
 
     <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-1 pb-5" style="margin-top: 150px;">
         <h1 class="text-center" style="color: gold;">BODY SPRAY</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./body spray image/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS DYNAMO</p>
@@ -71,7 +71,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./body spray image/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIIIGGS</p>
@@ -85,7 +85,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS RIDER</p>
@@ -99,7 +99,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PRIGGS</p>
@@ -113,7 +113,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS MEN</p>
@@ -127,7 +127,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/6" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS MEN</p>
@@ -141,7 +141,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/7" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS RED</p>
@@ -155,7 +155,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/8" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS BLACK</p>
@@ -169,7 +169,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/9" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NIVEA BIT CRIB</p>
@@ -183,7 +183,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/10" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NIVEA SPRUNE</p>
@@ -197,7 +197,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/11" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NIVEA FROH</p>
@@ -211,7 +211,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/12" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NIVEA UNORTHELIC</p>
@@ -225,7 +225,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/13" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR</p>
@@ -239,7 +239,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/14" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR THUNDER</p>
@@ -253,7 +253,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/15" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR DOUBLE</p>
@@ -267,7 +267,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/16" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR CRACKED</p>
@@ -281,7 +281,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/17" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STRORM ELIXIR BLUE</p>
@@ -295,7 +295,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/18" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR BLACK</p>
@@ -309,7 +309,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/19" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR FIRE</p>
@@ -323,7 +323,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/20" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR WOLF</p>
