--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
 <!-- ..............................................MALE CATEGORIES................................................... -->
     <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="male" style="margin-top: 150px;">
         <h1 class="text-center" style="color: gold;">MALE CATEGORIES</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PARUTA</p>
@@ -75,7 +75,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Male perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENIE</p>
@@ -89,7 +89,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MYTH</p>
@@ -103,7 +103,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ECINY</p>
@@ -117,7 +117,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Male perfume/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DUSTES</p>
@@ -140,7 +140,7 @@
 <!-- ..................................................FEMALE CATEGORIES........................................... -->
     <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="female" style="margin-top: 80px;">
         <h1 class="text-center" style="color: gold;">FEMALE CATEGORIES</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./female perfume/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">GELMA</p>
@@ -157,7 +157,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./female perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PANIOMAL</p>
@@ -171,7 +171,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENAL</p>
@@ -185,7 +185,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARIFAN</p>
@@ -199,7 +199,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FISHSUJ</p>
@@ -222,7 +222,7 @@
 <!-- ..............................................BODY SPRAY....................................................... -->
     <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="spray" style="margin-top: 80px;">
         <h1 class="text-center" style="color: gold;">BODY SPRAY</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./body spray image/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS DYNAMO</p>
@@ -239,7 +239,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./body spray image/9" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">NIVEA BIT CRIB</p>
@@ -253,7 +253,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/19" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR FIRE</p>
@@ -267,7 +267,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/3" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RIGGS RIDER</p>
@@ -281,7 +281,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./body spray image/20" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">STORM ELIXIR WOLF</p>
@@ -305,7 +305,7 @@
     <!-- .....................................................ROLL-ON.................................................. -->
     <div class="col-10 row d-md-flex mx-auto row-gap-3 gap-1" id="roll-on" style="margin-top: 80px;">
         <h1 class="text-center" style="color: gold;">ROLL-ON</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Rollonimage/download" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RORDSIT</p>
@@ -322,7 +322,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./Rollonimage/roll 2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DEOONT</p>
@@ -336,7 +336,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Rollonimage/roll 3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">SERT</p>
@@ -350,7 +350,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Rollonimage/roll 4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
@@ -364,7 +364,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./Rollonimage/roll 5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
