--- a/female.html
+++ b/female.html
@@ -54,7 +54,7 @@
 
     <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-1 pb-5" style="margin-top: 150px;">
         <h1 class="text-center" style="color: gold;">FEMALE CATEGORIES</h1>
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./female perfume/1" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">GELMA</p>
@@ -71,7 +71,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height: auto;">
             <img src="./female perfume/2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">PANIOMAL</p>
@@ -85,7 +85,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BENAL</p>
@@ -99,7 +99,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARIFAN</p>
@@ -113,7 +113,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FISHSUJ</p>
@@ -127,7 +127,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/6" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">GANUAL</p>
@@ -141,7 +141,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/7" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARMFONE</p>
@@ -155,7 +155,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/8" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">HAISHA</p>
@@ -169,7 +169,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/9" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ENCHANTED</p>
@@ -183,7 +183,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/10" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">SERENE</p>
@@ -197,7 +197,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/11" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MIDNIGHT BLOOM</p>
@@ -211,7 +211,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/12" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ENCHANTED BLOOM</p>
@@ -225,7 +225,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/13" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ETERNITY</p>
@@ -239,7 +239,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/14" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ENCHANTED</p>
@@ -253,7 +253,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/15" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">WHISPERS</p>
@@ -267,7 +267,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/16" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MIDNIGHT BLOSSOM</p>
@@ -281,7 +281,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/17" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">FUSTNUE</p>
@@ -295,7 +295,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/18" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BACUSEN</p>
@@ -309,7 +309,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/19" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">ARIFAN</p>
@@ -323,7 +323,7 @@
         </div>
 
 
-        <div class="card col-12 col-sm-6 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 mx-auto cards" style="height:auto;">
             <img src="./female perfume/20" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">MONAUR</p>
