--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
                         <a class="nav-link active" aria-current="page" href="#"
                             style="color: white; font-weight: bold; display: flex; justify-content: center; align-items: center;"><img src="./image/contact_page_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt=""> ABOUT US</a>
                     </li>
-                    <li class="nav-item">
-                        <img src="./image/Frame 36013.png" alt="">
-                    </li>
                 </ul>
 
 
@@ -76,9 +73,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span class="mx-auto" style="font-size: 33px; color: white; text-transform: uppercase;">Your trusted partner in discovering
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Your trusted partner in discovering
                         scents
                     </span> <br> <br>
 
@@ -99,9 +96,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; margin-top: 600px; color: white; text-transform: uppercase;">Seduce the hearts of those around
+                    <span style="font-size: 24px; margin-top: 600px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Seduce the hearts of those around
                         you
                         with our captivating fragances</span><br> <br>
 
@@ -122,9 +119,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">Our perfumes captures the essence of blooming flowers
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Our perfumes captures the essence of blooming flowers
                         and fresh petals</span><br> <br>
 
                         <a href="signup.html">
@@ -142,12 +139,12 @@
             <div class="carousel-item myown" data-bs-interval="5000"
                 style="background-image: url(./image/perfume\ 5.jpg); background-size: cover; width: 100%; height: 100vh; background-position: center; background-repeat: no-repeat;">
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
-                <div class="carousel-div" style="margin-top: 300px; font-size: 50px;">
+                <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">Reveal your true self with our captivating
-                        fragrance</span><br>
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Reveal your true self with our captivating
+                        fragrance</span><br> <br>
 
                         <a href="signup.html">
                             <button class="btn border-0 button1"
@@ -166,9 +163,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">Let the fragrance of our perfume blossom and flourish
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Let the fragrance of our perfume blossom and flourish
                         just like your personality</span><br> <br>
 
                         <a href="signup.html">
@@ -188,9 +185,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">Experience the epitome of luxury with our exclusive and
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Experience the epitome of luxury with our exclusive and
                         refined perfume</span><br> <br>
 
                         <a href="signup.html">
@@ -210,9 +207,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">Indulge in a seductive aroma of our perfume and unleash
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Indulge in a seductive aroma of our perfume and unleash
                         your inner sensitivity</span><br> <br>
 
                         <a href="signup.html">
@@ -232,9 +229,9 @@
                 <!-- <img src="..." class="d-block w-100" alt="..."> -->
                 <div class="carousel-div" style="margin-top: 300px;">
                     <h1 class="title"
-                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold;">
+                        style="color: gold; font-size: 50px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; text-shadow: 1px 1px 20px;">
                         ZEE SCENTS</h1>
-                    <span style="font-size: 33px; color: white; text-transform: uppercase;">ELevate your elegance with our premium perfume, crafted
+                    <span style="font-size: 24px; color: white; text-transform: uppercase; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">ELevate your elegance with our premium perfume, crafted
                         to perfection</span><br> <br>
 
                         <a href="signup.html">
