--- a/roll-on.html
+++ b/roll-on.html
@@ -54,7 +54,7 @@
 
     <div class="col-10 row d-md-flex mx-auto row-gap-5 gap-3 pb-5 contain" style="margin-top: 150px; justify-content: center; align-items: center;">
         <h1 class="text-center" style="color: gold;">ROLL-ON CATEGORIES</h1>
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height: auto;">
             <img src="./Rollonimage/download" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">RORDSIT</p>
@@ -71,7 +71,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height: auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height: auto;">
             <img src="./Rollonimage/roll 2" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DEOONT</p>
@@ -85,7 +85,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 3" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">SERT</p>
@@ -99,7 +99,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 4" class="card-img-top" alt="..." width="200px">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
@@ -113,7 +113,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 5" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE</p>
@@ -127,7 +127,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 6" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE DILIO</p>
@@ -141,7 +141,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 7" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DOVE OLD SPICE</p>
@@ -155,7 +155,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 8" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BRRND DCCSY</p>
@@ -169,7 +169,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 9" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BMTCETE</p>
@@ -183,7 +183,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 10" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">HAND</p>
@@ -197,7 +197,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll11" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BASRD</p>
@@ -211,7 +211,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 12" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">SRAVER</p>
@@ -225,7 +225,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 13" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">DACODELL</p>
@@ -239,7 +239,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 14" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">EUREC</p>
@@ -253,7 +253,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 2020" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BANNDE</p>
@@ -267,7 +267,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 16" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">CHANET</p>
@@ -281,7 +281,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 17" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BRAND NAMIE</p>
@@ -295,7 +295,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 18" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BARDNST</p>
@@ -309,7 +309,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/roll 19" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">LVABAC</p>
@@ -323,7 +323,7 @@
         </div>
 
 
-        <div class="card col-sm-6 col-md-3 col-lg-2 cards" style="height:auto;">
+        <div class="card col-5 col-md-3 col-lg-2 cards" style="height:auto;">
             <img src="./Rollonimage/15" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #313133; font-size: 14px; font-weight: bold;">BLORET</p>
